--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
 		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
 		"build": "tsc",
 		"prestart": "npm run build",
-		"start": "node .",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start:dev": "node .",
+		"start": "serve -s build",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"heroku-postbuild": "npm run build"
 	},
 	"keywords": [],
 	"author": "",
@@ -23,7 +25,8 @@
 		"express": "^4.17.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.7",
-		"nodemailer": "^6.4.17"
+		"nodemailer": "^6.4.17",
+		"serve": "^11.3.2"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.7",
