--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
 		"build": "tsc",
 		"prestart": "npm run build",
-		"start": "node .",
+		"start:dev": "node .",
+		"start": "node index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"heroku-postbuild": "npm run build"
 	},
