--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "tsc",
 		"prestart": "npm run build",
 		"start:dev": "node .",
-		"start": "node index.js",
+		"start": "serve -s build",
+		"serve": "node dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"heroku-postbuild": "npm run build"
 	},
