Fixing heroku app deployment

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build": "tsc",
 		"prestart": "npm run build",
 		"start:dev": "node .",
-		"start": "serve -s build",
+		"start": "npm run serve",
 		"serve": "node dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"heroku-postbuild": "npm run build"
