--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
 	"dependencies": {
 		"@types/bcrypt": "^3.0.0",
 		"@types/crypto-js": "^4.0.1",
+		"@types/express": "^4.17.7",
 		"@types/jsonwebtoken": "^8.5.0",
-		"tslint": "^6.1.2",
+		"@types/nodemailer": "^6.4.0",
 		"bcrypt": "^5.0.0",
 		"crypto-js": "^4.0.0",
 		"dotenv": "^8.2.0",
@@ -28,12 +29,11 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.11.7",
 		"nodemailer": "^6.4.17",
-		"serve": "^11.3.2"
+		"serve": "^11.3.2",
+		"tslint": "^6.1.2"
 	},
 	"devDependencies": {
-		"@types/express": "^4.17.7",
 		"@types/node": "^14.0.23",
-		"@types/nodemailer": "^6.4.0",
 		"typescript": "^3.9.6"
 	},
 	"engines": {
