--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
 	"description": "",
 	"main": "dist/index.js",
 	"scripts": {
-		"lint": "tslint -c tslint.json -p tsconfig.json --fix",
+		"prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
 		"build": "tsc",
 		"prestart": "npm run build",
 		"start:dev": "node .",
-		"start": "npm run serve",
-		"serve": "node dist/index.js",
+		"start": "node dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"heroku-postbuild": "npm run build"
 	},
