--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"start:dev": "node .",
 		"start": "node dist/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"heroku-postbuild": "npm run build"
+		"heroku-postbuild": "tsc"
 	},
 	"keywords": [],
 	"author": "",
